Remove data header from sources exported to ext

--- a/subprojects/ranger/cpp_version/src/utility/meson.build
+++ b/subprojects/ranger/cpp_version/src/utility/meson.build
@@ -15,6 +15,6 @@ utility_sources = files(
 
 ext_utility_sources = files(
   # 'ArgumentHandler.cpp',
-  'Data.cpp',
+  # 'Data.cpp',
   'utility.cpp',
 )
