Add argument to use AVX intrinsics

--- a/tools/cpp_tools/feature_generator/meson.build
+++ b/tools/cpp_tools/feature_generator/meson.build
@@ -3,4 +3,5 @@ gstdeps = [dependency('gstreamer-1.0'), dependency('gstreamer-app-1.0')]
 executable('feature_generator',
            sources:
           ['feature_generator.cpp','pipeline.cpp','buffer_utils.cpp'],
+          cpp_args: ['-mavx'],
           dependencies : gstdeps)
