Remove original Tree sources from extension

--- a/subprojects/ranger/cpp_version/src/Tree/meson.build
+++ b/subprojects/ranger/cpp_version/src/Tree/meson.build
@@ -14,4 +14,10 @@ tree_sources = files(
   'TreeSurvival.cpp'
 )
 
-ext_tree_sources = tree_sources
+ext_tree_sources = files(
+  'TreeClassification.cpp',
+  #'Tree.cpp',
+  'TreeProbability.cpp',
+  'TreeRegression.cpp',
+  'TreeSurvival.cpp',
+)
