--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -778,8 +778,10 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = subprojects/*    \
-                         "@TOP_SRCDIR@/docs/@DESIGN_DOC_NAME@"
+EXCLUDE                = "@TOP_SRCDIR@/subprojects" \
+                         "@TOP_SRCDIR@/dataset" \
+                         "@TOP_SRCDIR@/other" \
+                         "@TOP_SRCDIR@/docs/resources" \
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
