Add videfile management classes to meson sources

--- a/artifact_detector/lib/meson.build
+++ b/artifact_detector/lib/meson.build
@@ -1,5 +1,7 @@
 lib_src = [
   'feature_extractor.cpp',
+  'videofilesink.cpp',
+  'videofilesource.cpp',
 ]
 
 libartifactdetector = shared_library('artifact_detector',
