--- a/artifact_detector/lib/meson.build
+++ b/artifact_detector/lib/meson.build
@@ -2,6 +2,7 @@ lib_src = [
   'feature_extractor.cpp',
   'videofilesink.cpp',
   'videofilesource.cpp',
+  'trainer.cpp',
 ]
 
 libartifactdetector = shared_library('artifact_detector',
