Add trainer tool to examples build

--- a/artifact_detector/examples/meson.build
+++ b/artifact_detector/examples/meson.build
@@ -9,3 +9,16 @@ executable('feature_extractor_tool',
   dependencies : [libartifactdetector_dep],
   install : false,
 )
+
+trainer_tool_src = [
+  'trainer_tool.cpp',
+]
+
+executable('trainer_tool',
+  trainer_tool_src,
+  cpp_args : cpp_args,
+  include_directories : [projectinc],
+  dependencies : [libartifactdetector_dep],
+  install : false,
+)
+
