Add utility sources to lib meson

--- a/artifact_detector/lib/meson.build
+++ b/artifact_detector/lib/meson.build
@@ -3,6 +3,7 @@ lib_src = [
   'videofilesink.cpp',
   'videofilesource.cpp',
   'trainer.cpp',
+  'utility.cpp',
 ]
 
 libartifactdetector = shared_library('artifact_detector',
