Update trainer build to use library

--- a/tools/cpp_tools/trainer/meson.build
+++ b/tools/cpp_tools/trainer/meson.build
@@ -7,5 +7,5 @@
 
 executable('trainer',
           sources             : [ 'trainer.cpp' ],
-          include_directories : ranger_ext_incdirs,
-          dependencies        : rangerx_dep)
+          include_directories : [ranger_ext_incdirs, projectinc],
+          dependencies        : [rangerx_dep, libartifactdetector_dep])
