--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
     -   id: cpplint
         args: [--filter=-build/include_order, --exclude=tools/cpp_tools/ranger_ext]
     -   id: cppcheck
+        args: [--suppress=*:tools/cpp_tools/ranger_ext/*]
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
