Add videofile source example to build

--- a/artifact_detector/examples/meson.build
+++ b/artifact_detector/examples/meson.build
@@ -22,3 +22,40 @@ executable('trainer_tool',
   install : false,
 )
 
+
+argparse_tool_src = [
+  'argparse_tool.cpp',
+]
+
+executable('argparse_tool',
+  argparse_tool_src,
+  cpp_args : cpp_args,
+  include_directories : [projectinc],
+  dependencies : [libartifactdetector_dep],
+  install : false,
+)
+
+predictor_tool_src = [
+  'predictor_tool.cpp',
+]
+
+executable('predictor_tool',
+  predictor_tool_src,
+  cpp_args : cpp_args,
+  include_directories : [projectinc],
+  dependencies : [libartifactdetector_dep],
+  install : false,
+)
+
+videofile_source_example_src = [
+  'videofile_source_example.cpp',
+]
+
+executable('videofile_source_example',
+  videofile_source_example_src,
+  cpp_args : cpp_args,
+  include_directories : [projectinc],
+  dependencies : [libartifactdetector_dep],
+  install : false,
+)
+
