Update library build and add code to videofilesrc

--- a/artifact_detector/lib/meson.build
+++ b/artifact_detector/lib/meson.build
@@ -16,3 +16,5 @@ libartifactdetector = shared_library('artifact_detector',
 )
 
 libartifactdetector_dep = declare_dependency(link_with: libartifactdetector)
+
+project_deps += libartifactdetector_dep
