--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,9 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
         
-    - run: echo "Testing"
+    - run: echo "Building"
+    - run: meson setup wiki_build
+    - run: meson compile -C wiki_build
     
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
