--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,20 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu:20.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+    # # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    # - uses: actions/checkout@v2
         
-    - run: echo "Building"
-    - run: meson setup wiki_build
-    - run: meson compile -C wiki_build
+    - run: apt update
+    - run: apt install -y doxygen graphviz wget default-jre texlive-font-utils
+    - run: apt install -y python3 python3-pip ninja-build
+    - run: apt install -y libspdlog-dev pkg-config
+    - run: pip3 install meson pre-commit
+    - run: meson setup build -Ddeveloper-mode=false -Denable-tests=enabled
+    - run: meson compile -C build
     
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
@@ -32,4 +36,4 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         # Default Doxyfile build documentation to html directory. 
         # Change the directory if changes in Doxyfile
-        publish_dir: ./build/docs/html/
+        publish_dir: ./build/docs/html/*
