--- a/.gitignore
+++ b/.gitignore
@@ -2,35 +2,35 @@
 build/
 dataset/
 Makefile.org
-acta_aprob_licel.tex
+# acta_aprob_licel.tex
 acta_aprob_mscel.tex
-acta_eval_licel.tex
+# acta_eval_licel.tex
 acta_eval_mscel.tex
-agradecimientos.tex
+# agradecimientos.tex
 citations/
-conclusiones.tex
-debug.tex
-dedicatoria.tex
-disclaimer.tex
-fig/
-glosario.tex
-intro.tex
+# conclusiones.tex
+# debug.tex
+# dedicatoria.tex
+# disclaimer.tex
+#fig/
+# glosario.tex
+# intro.tex
 jpeg2ps
-licencia.tex
+# licencia.tex
 macros.tex.orig
 main.fdb_latexmk
 main.fls
 main.pdf
 main.tex.orig
 mint.sh
-resultados.tex
-resumen.tex
-solucion.tex
-sty/
-teoria.tex
+# resultados.tex
+# resumen.tex
+# solucion.tex
+# sty/
+# teoria.tex
 titlepage_licce_en.tex
 titlepage_licce_es.tex
-titlepage_licel_en.tex
+#titlepage_licel_en.tex
 titlepage_licel_es.tex
 titlepage_msc_en.tex
 titlepage_msc_es.tex
