Remove docs/dataset

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,143 @@
-*.aux
-*~
-*.log
-*.todo
-*.toc
-*.nls
-*.nlo
-*.lot
-*.lof
-*.ind
-*.ilg
-*.idx
-*.blg
-*.bcf
-*.bbl
-
-# Added by F.Guindon
-*.fls
-*.xml
-*.gz
-*.fdb_latexmk
-*__pycache__*
-
-# To be addressed in the future:
-*ranger*
-*anteproyecto*
-*disptec-2022*
-*rr-tools*
-subprojects/tesis/.gitignore
+.vscode/
+build/
+#dataset/
+Makefile.org
+acta_aprob_licel.tex
+acta_aprob_mscel.tex
+acta_eval_licel.tex
+acta_eval_mscel.tex
+agradecimientos.tex
+citations/
+conclusiones.tex
+debug.tex
+dedicatoria.tex
+disclaimer.tex
+fig/
+glosario.tex
+intro.tex
+jpeg2ps
+licencia.tex
+macros.tex.orig
+main.fdb_latexmk
+main.fls
+main.pdf
+main.tex.orig
+mint.sh
+resultados.tex
+resumen.tex
+solucion.tex
+sty/
+teoria.tex
+titlepage_licce_en.tex
+titlepage_licce_es.tex
+titlepage_licel_en.tex
+titlepage_licel_es.tex
+titlepage_msc_en.tex
+titlepage_msc_es.tex
+todo.txt
+tribunal_revision/
+ubuntu.sh
+../anteproyecto_presentation/
+../bitacoras/semana_7.tex
+../bitacoras/semana_8.tex
+../bitacoras/semana_9.tex
+../tesis/
+../../meson.build_
+../../meson_options.txt
+../../tools/bash_tools/generate_feature_files.sh
+../../tools/bash_tools/train_with_snippets.sh
+../../tools/python_tools/README.md
+../../tools/python_tools/features.py
+../../tools/python_tools/test_cpp_features.py
+../../tools/python_tools/utilities.py
+docs/bitacoras/semana_1.pdf
+docs/bitacoras/semana_2.pdf
+docs/bitacoras/semana_3.pdf
+docs/bitacoras/semana_3.synctex.gz
+docs/bitacoras/semana_4.pdf
+docs/bitacoras/semana_4.synctex.gz
+docs/bitacoras/semana_5.pdf
+docs/bitacoras/semana_5.synctex.gz
+docs/bitacoras/semana_6.pdf
+docs/bitacoras/semana_6.synctex.gz
+docs/bitacoras/semana_7.bcf
+docs/bitacoras/semana_7.pdf
+docs/bitacoras/semana_7.run.xml
+docs/bitacoras/semana_7.synctex.gz
+# docs/bitacoras/semana_7.tex
+docs/bitacoras/semana_8.aux
+docs/bitacoras/semana_8.bbl
+docs/bitacoras/semana_8.bcf
+docs/bitacoras/semana_8.blg
+docs/bitacoras/semana_8.fdb_latexmk
+docs/bitacoras/semana_8.fls
+docs/bitacoras/semana_8.log
+docs/bitacoras/semana_8.pdf
+docs/bitacoras/semana_8.run.xml
+docs/bitacoras/semana_8.synctex.gz
+# docs/bitacoras/semana_8.tex
+docs/bitacoras/semana_9.aux
+docs/bitacoras/semana_9.bbl
+docs/bitacoras/semana_9.bcf
+docs/bitacoras/semana_9.blg
+docs/bitacoras/semana_9.fdb_latexmk
+docs/bitacoras/semana_9.fls
+docs/bitacoras/semana_9.log
+docs/bitacoras/semana_9.pdf
+docs/bitacoras/semana_9.run.xml
+docs/bitacoras/semana_9.synctex.gz
+# docs/bitacoras/semana_9.tex
+docs/bitacoras_signed/
+docs/presentation_template/
+docs/resources/
+# docs/tesis/
+docs/tesis_latex_template/
+# meson.build_
+# meson_options.txt
+models/
+other/
+spinoffs/
+subprojects/disptec-2022/
+subprojects/ranger/.Rbuildignore
+subprojects/ranger/.git_ranger/
+subprojects/ranger/.gitattributes
+subprojects/ranger/.github/
+subprojects/ranger/.gitignore
+subprojects/ranger/DESCRIPTION
+subprojects/ranger/NAMESPACE
+subprojects/ranger/NEWS
+subprojects/ranger/NEWS.md
+subprojects/ranger/R/
+subprojects/ranger/README.md
+subprojects/ranger/_pkgdown.yml
+subprojects/ranger/cpp_version/.gitignore
+subprojects/ranger/cpp_version/CMakeLists.txt
+subprojects/ranger/cpp_version/COPYING
+subprojects/ranger/cpp_version/cmake_build/
+subprojects/ranger/cpp_version/cross_compile/
+subprojects/ranger/cpp_version/src/.gitignore
+subprojects/ranger/cpp_version/src/build/
+subprojects/ranger/cpp_version/test/
+subprojects/ranger/inst/
+subprojects/ranger/man/
+subprojects/ranger/src/.gitignore
+subprojects/ranger/src/AAA_check_cpp11.cpp
+subprojects/ranger/src/DataRcpp.h
+subprojects/ranger/src/DataSparse.cpp
+subprojects/ranger/src/DataSparse.h
+subprojects/ranger/src/Makevars
+subprojects/ranger/src/Makevars.win
+subprojects/ranger/src/RcppExports.cpp
+subprojects/ranger/src/rangerCpp.cpp
+subprojects/ranger/src/utilityRcpp.cpp
+subprojects/ranger/tests/
+subprojects/rr-tools/
+# tools/bash_tools/generate_feature_files.sh
+# tools/bash_tools/train_with_snippets.sh
+# tools/python_tools/README.md
+tools/python_tools/__pycache__/
+tools/python_tools/dataset.dat
+# tools/python_tools/features.py
+tools/python_tools/ranger_out.confusion
+# tools/python_tools/test_cpp_features.py
+# tools/python_tools/utilities.py
