Update tesis repository

--- a/subprojects/tesis/fig/meson.build
+++ b/subprojects/tesis/fig/meson.build
@@ -2,10 +2,12 @@ source_files += files([
   'lossy_system.tikz',
   'video_inpainter_general.tikz',
   'video_inpainter_steps.tikz',
-  'extractor_steps.tikz',
   'detector_general.tikz',
   'detector_steps.tikz',
-  'framesetgen.tikz',
+  'datasetgen.tikz',
   'simulator.tikz',
-  'synch.tikz'
+  'framesetgen.tikz',
+  'synch.tikz',
+  'labeler.tikz',
+  'extractor_steps.tikz',
 ])
